@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-14T02:23:14Z",
+  "timestamp" : "2022-07-14T08:27:39Z",
   "count_outdated" : 667,
   "uniques_outdated" : 346,
   "count" : 697,
-  "uniques" : 362,
+  "uniques" : 363,
   "clones" : [
     {
       "timestamp": "2022-06-30T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -98,6 +98,13 @@
     },
     {
       "timestamp": "2022-07-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
